# GDV2

./: README.md
Exercise1/: OctahedronNormalenKompression.tex  Quantisierung.tex  theorie1.tex
Exercise1/tex/: OctahedronNormalenKompression.tex  Quantisierung.tex  theorie1.tex
Exercise2/tex/: Approximation.tex  BSplines.tex  BernsteinBezier.tex  Interpolation.tex  theorie2.aux  theorie2.tex
Exercise3/tex/: BernsteinBezier.tex  CubicSplines.tex  ImplicitSurface.tex  theorie3.aux  theorie3.tex
Exercise5/tex/: BernsteinBezier.tex  Emission.tex  MarchingCubes.tex  Splines.tex  theorie5.aux  theorie5.tex
Exercise6/tex/: Euler.tex  Netzkompression.tex  Punktwolken.tex  theorie5.aux  theorie5.dvi  theorie5.tex
Framework/src/: CMakeLists.txt  TriangleMesh.cpp  VolumeVisualization.cpp  main.cpp  rendering.cpp
Framework/src/include/: TriangleMesh.h  Vec3.h  VolumeVisualization.h  dualpointslist.h  main.h  mcLookUp.h  rendering.h
